--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 CHANGES IN VERSION 1.21
 -----------------------
 
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o pileup allows negative values (including -Inf) to cycle_bins to
+      specify bins from the end of a read
+
 BUG FIXES
 
     o segfault on range iteration introduced 1.19.35, fixed in 1.21.1
