BamViews_delegate requires named args
- BatchJobs back-end


git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/Rsamtools@106431 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,9 @@ BUG FIXES
 
     o segfault on range iteration introduced 1.19.35, fixed in 1.21.1
 
+    o BamViews parallel evaluation with BatchJobs back-end requires
+      named arguments
+
 CHANGES IN VERSION 1.19
 -----------------------
 
